Filled in questions and added php to check if answers given are correct

--- a/Lab4/Exercise2/quiz.html
+++ b/Lab4/Exercise2/quiz.html
@@ -7,40 +7,43 @@
 <body>
     <form action="quiz.php" method="post">
         <!-- Question 1 -->
-        <h2>Question 1</h2>
-        <input type="radio" name="q1" value="a1"> a1 <br>
-        <input type="radio" name="q1" value="a2"> a2 <br>
-        <input type="radio" name="q1" value="a3"> a3 <br>
-        <input type="radio" name="q1" value="a4"> a4
+        <h2>In what place was Christmas once illegal?</h2>
+        <input type="radio" name="q1" value="England">England <br>
+        <input type="radio" name="q1" value="France">France <br>
+        <input type="radio" name="q1" value="Brazil">Brazil <br>
+        <input type="radio" name="q1" value="Russia">Russia
 
         <!-- Question 2 -->
-        <h2>Question 2</h2>
-        <input type="radio" name="q2" value="a1"> a1 <br>
-        <input type="radio" name="q2" value="a2"> a2 <br>
-        <input type="radio" name="q2" value="a3"> a3 <br>
-        <input type="radio" name="q2" value="a4"> a4
+        <h2>In California, it is illegal to eat oranges while doing what?</h2>
+        <input type="radio" name="q2" value="Working on a computer">Working on a computer <br>
+        <input type="radio" name="q2" value="Gardening">Gardening <br>
+        <input type="radio" name="q2" value="Bathing">Bathing <br>
+        <input type="radio" name="q2" value="Driving">Driving
 
         <!-- Question 3 -->
-        <h2>Question 3</h2>
-        <input type="radio" name="q3" value="a1"> a1 <br>
-        <input type="radio" name="q3" value="a2"> a2 <br>
-        <input type="radio" name="q3" value="a3"> a3 <br>
-        <input type="radio" name="q3" value="a4"> a4
+        <h2>Coulrophobia means fear of what?</h2>
+        <input type="radio" name="q3" value="Sacred Things">Sacred Things <br>
+        <input type="radio" name="q3" value="Jews">Jews <br>
+        <input type="radio" name="q3" value="Old People">Old People <br>
+        <input type="radio" name="q3" value="Clowns">Clowns
 
         <!-- Question 4 -->
-        <h2>Question 4</h2>
-        <input type="radio" name="q4" value="a1"> a1 <br>
-        <input type="radio" name="q4" value="a2"> a2 <br>
-        <input type="radio" name="q4" value="a3"> a3 <br>
-        <input type="radio" name="q4" value="a4"> a4
+        <h2>How many dimples are there on a regular golf ball?</h2>
+        <input type="radio" name="q4" value="418">418 <br>
+        <input type="radio" name="q4" value="377">377 <br>
+        <input type="radio" name="q4" value="294">294 <br>
+        <input type="radio" name="q4" value="336">336
 
         <!-- Question 5 -->
-        <h2>Question 5</h2>
-        <input type="radio" name="q5" value="a1"> a1 <br>
-        <input type="radio" name="q5" value="a2"> a2 <br>
-        <input type="radio" name="q5" value="a3"> a3 <br>
-        <input type="radio" name="q5" value="a4"> a4 <br>
-        <input type="submit">
+        <h2>Which of the following is the longest running American animated TV show?</h2>
+        <input type="radio" name="q5" value="Rugrats">Rugrats <br>
+        <input type="radio" name="q5" value="Simpsons">Simpsons <br>
+        <input type="radio" name="q5" value="Pokemon">Pokemon <br>
+        <input type="radio" name="q5" value="TV Funhouse"> TV Funhouse <br>
+        <input type="submit" value="Submit Quiz">
     </form>
+
+    
+
 </body>
 </html>
