--- a/Lab4/Exercise3/customerFrontend.html
+++ b/Lab4/Exercise3/customerFrontend.html
@@ -1,39 +1,51 @@
 <html>
 <head>
     <title>CircleDot</title>
+    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,500" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
-        <h1>CircleDot</h1>
-    </div>
-    <div class="product">
-        <h1>Tire</h1>
-        <img src="Assets/tire.jpg">
-    </div>
-    <div class="product">
-        <h1>Frisbee</h1>
-        <img src="Assets/frisbee.jpg">
-    </div>
-    <div class="product">
-        <h1>Donut</h1>
-        <img src="Assets/donut.jpg">
-    </div>
+    <div class="wrapper">
+        <div class="header">
+            <h1><span style="color: orange;">Circle</span><span style="color: green;">Dot</span></h1>
+        </div>
+        <div class="product">
+            <img src="Assets/tire.jpg">
+            <h1>Tire</h1>
+            <p>Description of Tire</p>
+            <p class="price">$129.99</p>
+        </div>
+        <div class="product">
+            <img src="Assets/frisbee.jpg">
+            <h1>Frisbee</h1>
+            <p>Description of Frisbee</p>
+            <p class="price">$12.99</p>
+        </div>
+        <div class="product">
+            <img src="Assets/donut.jpg">
+            <h1>Donut</h1>
+            <p>Description of Donut</p>
+            <p class="price">$1.29</p>
+        </div>
+    </div><!-- end Wrapper -->
     <div class="shopForm">
         <form onsubmit="validate()">
-            Username:
+            <h2>User Information:</h2>
+            <label>Username:</label>
             <input type="text" name="username" value=""><br>
-            Password:
+            <label>Password:</label>
             <input type="password" name="pass" value=""><br>
-            Tire Amount:
+            <h2>Product Options:</h2>
+            <label>Tire Amount</label>
             <input type="text" name="tireAmt" value="0"><br>
-            Frisbee Amount:
+            <label>Frisbee Amount</label>
             <input type="text" name="frisbeeAmt" value="0"><br>
-            Donut Amount: 
+            <label>Donut Amount</label>
             <input type="text" name="donutAmt" value="0"><br>
             <h2>Shipping Options:</h2>
-            <input type="radio" name="shipping" value="sevenDay"> 7 day shipping (Free)<br>
-            <input type="radio" name="shipping" value="oneDay"> over night shipping ($50.00)<br>
-            <input type="radio" name="shipping" value="threeDay"> three day shipping ($5.00)<br>
+            <input type="radio" name="shipping" value="sevenDay"><label>Seven day shipping (Free)</label><br>
+            <input type="radio" name="shipping" value="threeDay">Three day shipping ($5.00)<br>
+            <input type="radio" name="shipping" value="oneDay">Over night shipping ($50.00)<br>
             <input type="submit" value="Purchase">
             <input type="reset">
         </form>
