--- a/Lab4/Exercise3/customerFrontend.html
+++ b/Lab4/Exercise3/customerFrontend.html
@@ -3,6 +3,7 @@
     <title>CircleDot</title>
     <link href="style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:400,500" rel="stylesheet">
+    <script src="formChecker.js"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -29,21 +30,21 @@
         </div>
     </div><!-- end Wrapper -->
     <div class="shopForm">
-        <form onsubmit="validate()">
+        <form onsubmit="return validate()">
             <h2>User Information:</h2>
             <label>Username:</label>
-            <input type="text" name="username" value=""><br>
+            <input id="user" type="text" name="username" value="" placeholder="user@domain.com"><br>
             <label>Password:</label>
-            <input type="password" name="pass" value=""><br>
+            <input id="pass" type="password" name="pass" value="" placeholder="password"><br>
             <h2>Product Options:</h2>
             <label>Tire Amount</label>
-            <input type="text" name="tireAmt" value="0"><br>
+            <input id="tamt" type="text" name="tireAmt" value="0"><br>
             <label>Frisbee Amount</label>
-            <input type="text" name="frisbeeAmt" value="0"><br>
+            <input id="famt" type="text" name="frisbeeAmt" value="0"><br>
             <label>Donut Amount</label>
-            <input type="text" name="donutAmt" value="0"><br>
+            <input id="damt" type="text" name="donutAmt" value="0"><br>
             <h2>Shipping Options:</h2>
-            <input type="radio" name="shipping" value="sevenDay"><label>Seven day shipping (Free)</label><br>
+            <input type="radio" name="shipping" value="sevenDay" checked><label>Seven day shipping (Free)</label><br>
             <input type="radio" name="shipping" value="threeDay">Three day shipping ($5.00)<br>
             <input type="radio" name="shipping" value="oneDay">Over night shipping ($50.00)<br>
             <input type="submit" value="Purchase">
