--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
                 <a href="Exercise_3/index.html">Exercise 3</a><br>
                 <a href="Exercise_4/index.html">Exercise 4</a>
             </div>
+            <div class="project">
+                <h2>EECS 448 Lab 4</h2>
+                <span></span>
+                <a href="Lab4/Exercise1/index.html">Exercise 1</a><br>
+                <a href="Lab4/Exercise2/quiz.html">Exercise 2</a><br>
+                <a href="Lab4/Exercise3/customerFrontend.html">Exercise 3</a>
+            </div>
         </div><!-- end projects -->
     </div><!-- end wrapper -->
     <footer>
